--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!doctype html>
+<!doctype html>
 <html lang="en">	
 <head>
 	<meta charset="utf-8">
@@ -20,8 +20,8 @@
 			<!-- ALL SLIDES GO HERE -->
 			<!-- Each section element contains an individual slide -->
 			<section>
-				<h1>About My Product</h1>
-				<p>My product discussed here</p>		
+				<h1>Verkkosovelluskehitys</h1>
+				<p>Bloki made by Roope Turre Turunen</p>		
 			</section>
  
 			<section id="show-a-link">
@@ -31,9 +31,7 @@
 			</section>
  
 			<section>
-				<h1>Slide 3</h1>
-				<p>How does one revisit an arbitrary slide in code?</p>
-				<p>Visit internal slide<a href="#/show-a-link"> 2</a>
+				
 			</section>
  
 			</div>
