--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 
@@ -33,39 +34,58 @@
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
 	</head>
- 
-<body>
-	<!-- Wrap the entire slide show in a div using the "reveal" class. -->
-	<div class="reveal">
-		<!-- Wrap all slides in a single "slides" class -->
-		<div class="slides">
- 
-			<!-- ALL SLIDES GO HERE -->
-			<!-- Each section element contains an individual slide -->
-			<section>
-				<h1>Verkkosovelluskehitys</h1>
-				<p>Bloki made by Roope Turre Turunen</p>		
-			</section>
- 
-			<section id="show-a-link">
-				<h1>Show a live link</h1>
-				<p>Slide 2 discussed here</p>
-				<p>See <a href="http://www.htmlcheats.com">HTMLCheats.com</a><p>
-			</section>
- 
-			<section>
-				
-			</section>
- 
-			</div>
-	</div>
-	<script src="lib/js/head.min.js"></script>
-	<script src="js/reveal.min.js"></script>
- 
-	<script>
-		// Required, even if empty.
-		Reveal.initialize({
-		});
-	</script>
-</body>
+
+	<body>
+
+		<div class="reveal">
+
+			<!-- Any section element inside of this container is displayed as a slide -->
+			<div class="slides">
+				<section>
+					<h1>Verkkosovelluskehitys</h1>
+					<h3>BLOKI MADE BY </h3>
+					<p>
+						ROOPE "TURRE" TURUNEN
+					</p>
+				</section>
+
+				<section>
+					<h2>Ensimmäinen viikko</h2>
+					<p>
+						
+					</p>
+				</section>
+
+				<!-- Example of nested vertical slides -->
+		</div>		
+
+		<script src="lib/js/head.min.js"></script>
+		<script src="js/reveal.js"></script>
+
+		<script>
+
+			// Full list of configuration options available at:
+			// https://github.com/hakimel/reveal.js#configuration
+			Reveal.initialize({
+				controls: true,
+				progress: true,
+				history: true,
+				center: true,
+
+				transition: 'slide', // none/fade/slide/convex/concave/zoom
+
+				// Optional reveal.js plugins
+				dependencies: [
+					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'plugin/zoom-js/zoom.js', async: true },
+					{ src: 'plugin/notes/notes.js', async: true }
+				]
+			});
+
+		</script>
+
+	</body>
 </html>
