--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<section>
 					<h2>Ensimmäinen viikko</h2>
 					<p>
-						
+					Tähän tekstiä ensimmäisestä uskomattomasta viikosta		
 					</p>
 				</section>
 
