--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 				<section>
 					<h2>Ensimmäinen viikko</h2>
 					<p>
-					Tähän tekstiä ensimmäisestä uskomattomasta viikosta		
+					Tähän tekstiä ensimmäisestä <b>
+					uskomattomasta viikosta		
 					</p>
 				</section>
 
