--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>Master blogger</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -52,7 +52,7 @@
 				<section>
 					<h2>Ensimmäinen viikko</h2>
 					<p>
-					Tähän tekstiä ensimmäisestä <b>
+					Tähän tekstiä ensimmäisestä 
 					uskomattomasta viikosta		
 					</p>
 				</section>
