--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Master blogger</title>
+		<title> MasterBlogger </title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
