--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
-!doctype html>
-<html lang="en">	
-<head>
-	<meta charset="utf-8">
-	<title>Reveal.js 3 Slide Demo</title>
-	<link rel="stylesheet" href="css/reveal.min.css">
-	<link rel="stylesheet" href="css/theme/default.css" id="theme">	
-	<!--Add support for earlier versions of Internet Explorer -->
-	<!--[if lt IE 9]>
-	<script src="lib/js/html5shiv.js"></script>
-	<![endif]-->
-</head>
- 
+<!doctype html>
+<html lang="en">
+
+	<head>
+		<meta charset="utf-8">
+
+		<title>reveal.js - The HTML Presentation Framework</title>
+
+		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+		<meta name="author" content="Hakim El Hattab">
+
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+
+		<link rel="stylesheet" href="css/reveal.css">
+		<link rel="stylesheet" href="css/theme/black.css" id="theme">
+
+		<!-- Code syntax highlighting -->
+		<link rel="stylesheet" href="lib/css/zenburn.css">
+
+		<!-- Printing and PDF exports -->
+		<script>
+			var link = document.createElement( 'link' );
+			link.rel = 'stylesheet';
+			link.type = 'text/css';
+			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+			document.getElementsByTagName( 'head' )[0].appendChild( link );
+		</script>
+
+		<!--[if lt IE 9]>
+		<script src="lib/js/html5shiv.js"></script>
+		<![endif]-->
+	</head>
 <body>
 	<!-- Wrap the entire slide show in a div using the "reveal" class. -->
 	<div class="reveal">
@@ -20,21 +42,47 @@
 			<!-- ALL SLIDES GO HERE -->
 			<!-- Each section element contains an individual slide -->
 			<section>
-				<h1>About My Product</h1>
-				<p>My product discussed here</p>		
+				<h1>VERKKOSOVELLUSKEHITYS</h1>
+				<p>BLOGI MADE BY ROOPE "TURRE" TURUNEN</p>		
 			</section>
- 
-			<section id="show-a-link">
-				<h1>Show a live link</h1>
-				<p>Slide 2 discussed here</p>
-				<p>See <a href="http://www.htmlcheats.com">HTMLCheats.com</a><p>
-			</section>
- 
 			<section>
-				<h1>Slide 3</h1>
-				<p>How does one revisit an arbitrary slide in code?</p>
-				<p>Visit internal slide<a href="#/show-a-link"> 2</a>
+			<section>
+				<h1> Viikko 2 </h1>
+				<p> Verkkoprotokollat </p>
 			</section>
+			<section>
+				<h2> TCP </h2>
+					<ul>
+						<li> Transmission Control Protocol</li>
+						<li> Luodaan yhteystietokoneiden v'lille, joilla on pääsy Internettiin </li>
+						<li> Kuljetuskerroksen protokolla <li>
+						<li> Huolehtii pakettien saapumisjärjestyksestä ja tarvittaessa lähettää hävinneet paketit uudelleen </li>
+						<li> Suurin osa liikennöinnistä tapahtuu TCP/IP-yhteydellä </li>
+					</ul>	
+			</section>
+			<section>
+				<h2>IP</h2>
+					<ul>
+						<li>Internet Protocol</li>
+						<li>Yhdistää kaikkia internettiin liittyneitä laitteita</li>
+						<li>Jokaisella laitteella on yksilöllinen IP-osoite </li>
+					</ul>		
+					
+			</section>
+				<section>
+					<h2>SSH</h2>
+						<ul>
+							<li>Secure Shell</li>
+							<li>Salattuun tietoliikenteeseen tarkoitettu protokolla</li>
+							<li>Yleisin käyttötapa on ottaa etäyhteys SSH-asiakasohjelmalla SSH-palvelimeen</li>
+							<li>SSH:lla voidaan suojata FTP-, HTTP- tai muuta liikennettä, joka toimii samalla tasolla</li>
+							
+						</ul>
+			</section>
+ 
+			
+ 
+			
  
 			</div>
 	</div>
